--- a/pom.xml
+++ b/pom.xml
@@ -31,6 +31,7 @@
     </developers>
 
     <properties>
+        <argLine /> <!-- required for java agent declaration, do not remove -->
         <gridcapa-rao-runner-api.version>1.30.0</gridcapa-rao-runner-api.version>
     </properties>
 
@@ -51,7 +52,7 @@
                 <groupId>org.apache.maven.plugins</groupId>
                 <artifactId>maven-surefire-plugin</artifactId>
                 <configuration>
-                    <argLine>-javaagent:${org.mockito:mockito-core:jar}</argLine>
+                    <argLine>@{argLine} -javaagent:${org.mockito:mockito-core:jar}</argLine>
                 </configuration>
             </plugin>
             <plugin>
